--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
      <div class="grid"> 
 
-      <div class="vediopre">
+      <div class="vediopre" onclick="location.href='//www.youtube.com/watch?v=qkxuFKqJXWY'">
          <div class="thumbpar">
             <img class="thumb" src="thumb/ANUBHAV.avif">
             <div class="vti">
@@ -143,7 +143,7 @@
          </div>
       </div>
 
-      <div class="vediopre">
+      <div class="vediopre" onclick="location.href='//www.youtube.com/watch?v=RpH5axdiGT0'">
          <div class="thumbpar">
             <img class="thumb" src="thumb/suits.avif">
             <div class="vti">
@@ -168,7 +168,7 @@
          </div>
       </div>
 
-      <div class="vediopre">
+      <div class="vediopre" onclick="location.href='//www.youtube.com/watch?v=oyBy9YXLlkQ'">
          <div class="thumbpar">
             <img class="thumb" src="thumb/rohith.avif">
             <div class="vti">
@@ -192,7 +192,7 @@
          </div>
       </div>
 
-      <div class="vediopre">
+      <div class="vediopre" onclick="location.href='//www.youtube.com/watch?v=n4Pf4OCpRrI&t=14s'">
          <div class="thumbpar">
             <img class="thumb" src="thumb/TEEN.avif">
             <div class="vti">
@@ -216,8 +216,8 @@
             </div>
          </div>
       </div>
-      
-      <div class="vediopre">
+
+      <div class="vediopre" onclick="location.href='//www.youtube.com/watch?v=QfpprTbqa-s'">
          <div class="thumbpar">
             <img class="thumb" src="thumb/TMKOC.avif">
             <div class="vti">
@@ -241,7 +241,7 @@
          </div>
       </div>
       
-      <div class="vediopre">
+      <div class="vediopre" onclick="location.href='//www.youtube.com/watch?v=7RyT0Bu5VMI'">
          <div class="thumbpar">
             <img class="thumb" src="thumb/VIRAT2.avif">
             <div class="vti">
